--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -29,22 +29,34 @@ aside {
     flex: 1;                     
     overflow-y: auto;
     background-color: #e0e0e0;
-    padding: 20px;
-    margin: 10px;
+    /* padding: 20px; */
+    /* margin: 10px; */
     border-radius: 5px;
+    
 }
 
 header {
-    margin-bottom: 2cm;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    /* margin-bottom: 2cm; */
     background-color: #4a4a4a;
     color: white;
-    padding: 20px;
+    /* padding: 20px; */
+    text-align: center;
 }
 
+body header h1 {
+    display: flex;
+    align-items: flex-start;
+    margin-left: 50px;
+}
 body header ul {
-    margin-top: 50px;
+    margin-right: 50px;
     list-style-type: none;
-    padding: 0;
+    align-items: flex-end;
+    border-radius: 10px;
 }
 
 body header ul li {
@@ -62,11 +74,12 @@ a {
     color: #0066cc;
     text-decoration: none;
     transition: color 0.3s ease;
+    transition: font-size 0.3s ease;
 }
 
 a:hover {
-    color: #004080;
-    text-decoration: underline;
+    color: #fea36b;
+    font-size: 20px;
 }
 
 footer {
