--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
+    overflow-x: hidden;
 }
 
 body::before {
@@ -43,7 +44,6 @@ header {
     padding: 20px 100px;
     position: fixed;
     width: -webkit-fill-available;
-    background: linear-gradient(45deg, #343434, transparent);
     backdrop-filter: blur(1px);
 }
 
@@ -214,48 +214,52 @@ blockquote {
     margin-top: 50px;
 }
 
-.Phillip{
-    height: 50px;
-}
 
 .author {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     gap: 10px;
+    color:#C271FF
 }
 
-.author .top-row {
+.author > div:first-child {
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
-.author .review {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.author .stars {
-    display: flex;
-    gap: 5px;
-}
-
-.Phillip {
+.author img.Phillip {
     width: 50px;
     height: 50px;
 }
 
 .purple_name {
-    font-size: 18px;
-    color: #C271FF;
+    margin: 0;
+    font-size: 14px;
+}
+
+.review {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.stars {
+    display: flex;
+    gap: 2px;
+}
+
+.stars img {
+    width: 15px;
+    height: 15px;
 }
 
 .purple_time {
+    margin: 0;
     font-size: 14px;
-    color: #C271FF;
 }
+
 .display_4 {
     display: flex;
     justify-content: center;
@@ -399,4 +403,10 @@ footer {
     font-size: 8px;
     margin-top: 80px;
     padding-left: 550px;
+}
+
+.professionals h3,
+.professionals p 
+footer p{
+    text-align: center;
 }
